--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,8 @@
-version.major=0
+version.major=3
 version.minor=0
 version.revision=0
 version.build=0
 packaging.release=0
-phing.project.name=demo
+phing.project.name=mb3starter
 project.shortdescription=demo short description
 project.description=demo long description
