--- a/build.properties
+++ b/build.properties
@@ -3,6 +3,6 @@ version.minor=0
 version.revision=0
 version.build=0
 packaging.release=0
-phing.project.name=mb3starter
-project.shortdescription=demo short description
-project.description=demo long description
+phing.project.name=mapbender3-starter
+project.shortdescription=The PHP webmapping framework
+project.description=Mapbender3 is a webmapping framework with support for WMS and WFS that allows you to create your own webmapping applications
