--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = application/mapbender
 	url = git://github.com/mapbender/mapbender.git
 
+[submodule "documentation/_exts"]
+	path = documentation/_exts
+	url = https://github.com/fabpot/sphinx-php.git
