Dependency management using Phing

--- a/application/app/config/parameters.yml.dist
+++ b/application/app/config/parameters.yml.dist
@@ -15,5 +15,6 @@ parameters:
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
 
-    server_name:       Mapbender3
+    mapbender:
+        server_name:       Mapbender3
 
