--- a/application/app/config/parameters.yml.dist
+++ b/application/app/config/parameters.yml.dist
@@ -16,5 +16,6 @@ parameters:
     secret:            ThisTokenIsNotSoSecretChangeIt
 
     fom:
-        server_name:       Mapbender3
+        server_name:   Mapbender3
+        server_logo:   bundles/web/mapbendermanager/logo.png
 
