--- a/application/app/config/security.yml
+++ b/application/app/config/security.yml
@@ -33,11 +33,5 @@ security:
 
     access_control:
         - { path: ^/user/login,    roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/manager/user/forgotpass,    roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/manager/user/registerconfirm,    roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/manager/user/registerreset,    roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/manager/user/register,    roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/manager/user/resetpass,    roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin,         roles: ROLE_ADMIN }
-        - { path: ^/manager,       roles: ROLE_ADMIN }
+        - { path: ^/manager,       roles: ROLE_USER }
 
