--- a/application/app/config/mapbender.yml
+++ b/application/app/config/mapbender.yml
@@ -35,9 +35,9 @@ parameters:
     applications:
         mapbender_user:
             title: Mapbender User Demo Map
-            description: "Simple map showing WMS use. Use root/root to login."
+            description: "Simple map showing WMS use."
             published: true
-            roles: [ROLE_USER]
+            #roles: [ROLE_USER]
             template:  Mapbender\CoreBundle\Template\Fullscreen
             layersets:
                 main:
