CoordinatesDisplay merged from Geoportal.DE

--- a/application/app/config/mapbender.yml
+++ b/application/app/config/mapbender.yml
@@ -128,4 +128,8 @@ parameters:
                         class: Mapbender\CoreBundle\Element\Toc
                         target: map
                         autoOpen: false
+                footer:
+                    coordinates:
+                        class: Mapbender\CoreBundle\Element\CoordinatesDisplay
+                        target: map
 
