--- a/application/composer.json
+++ b/application/composer.json
@@ -20,7 +20,9 @@
         "jms/di-extra-bundle": "1.1.*",
 
         "friendsofsymfony/jsrouting-bundle": "dev-master",
-        "kriswallsmith/buzz": "dev-master"
+        "kriswallsmith/buzz": "dev-master",
+
+        "mopa/bootstrap-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
@@ -42,6 +44,7 @@
     "minimum-stability": "dev",
     "extra": {
         "symfony-app-dir": "app",
-        "symfony-web-dir": "web"
+        "symfony-web-dir": "web",
+        "symfony-assets-install": "symlink"
     }
 }
