updated rpm specfile to match mapbender-starter

--- a/packaging/opensuse-rpm/SPECS/template.spec.dist
+++ b/packaging/opensuse-rpm/SPECS/template.spec.dist
@@ -1,4 +1,3 @@
-%define buildroot  %{_topdir}/bkg 
 %define _cachedir   /var/cache
 %define _logdir     /var/log
 %define _wwwdir     /var/www
@@ -41,13 +40,13 @@ rm -rf app/logs/*
 rm -rf %{buildroot}
 
 install -d %{buildroot}%{_sysconfdir}/%{name}
-install app/config/parameters.ini.dist %{buildroot}%{_sysconfdir}/%{name}/%{name}.ini.dist
-rm -f app/config/parameters.ini
-ln -s %{_sysconfdir}/%{name}/%{name}.ini app/config/parameters.ini
-rm app/config/parameters.ini.dist
+install app/config/parameters.yml.dist %{buildroot}%{_sysconfdir}/%{name}/%{name}.yml.dist
+rm -f app/config/parameters.yml
+ln -s %{_sysconfdir}/%{name}/%{name}.yml app/config/parameters.yml
+rm app/config/parameters.yml.dist
 
 install -d %{buildroot}%{_datadir}/%{name}
-cp -rp  app src mapbender vendor  web  %{buildroot}%{_datadir}/%{name}/
+cp -rp  app src mapbender owsproxy fom vendor web %{buildroot}%{_datadir}/%{name}/
 
 install -d %{buildroot}%{_cachedir}/%{name}
 install -d %{buildroot}%{_logdir}/%{name}
@@ -59,12 +58,14 @@ install -d %{buildroot}%{_logdir}/%{name}
 %{_datadir}/%{name}/app
 %{_datadir}/%{name}/src
 %{_datadir}/%{name}/mapbender
+%{_datadir}/%{name}/owsproxy
+%{_datadir}/%{name}/fom
 %{_datadir}/%{name}/vendor
 %attr(-,wwwrun,root) %{_datadir}/%{name}/web
 %config %{_sysconfdir}/*
 %attr(0755,wwwrun,root) %{_cachedir}/%{name}
 %attr(0755,wwwrun,root) %{_logdir}/%{name}
-%doc doc
+%doc documentation/
 
 %changelog
 #@@rpm.changelog@@
@@ -82,9 +83,9 @@ if [ "$1" == "2" ]; then
   echo "done upgrading"
 fi
 
-# There is no post-install script that creates the database because we ship with an example mapconfigurator.ini
+# There is no post-install script that creates the database because we ship with an example %{name}.yml
 # and there is likely no database available at installtime
 
-# There is a post-upgrade script, however that tries to update the databse schema - if mapconfigurator is configured,
+# There is a post-upgrade script, however that tries to update the databse schema - if %{name} is configured,
 # it has to be updated, if it is not the script fails and everything is well
 # if doing cache:clear - > make sure it's done with  --env=prod --no-debug
